--- a/Apester/Main.storyboard
+++ b/Apester/Main.storyboard
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="oXn-ea-6sv">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="oXn-ea-6sv">
     <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19519"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -33,7 +33,7 @@
                             <constraint firstItem="VWw-u6-TLD" firstAttribute="top" secondItem="Tha-vb-h2l" secondAttribute="bottom" constant="10" id="n1s-Ls-3AA"/>
                         </constraints>
                     </view>
-                    <navigationItem key="navigationItem" title="Single UnitView" id="B81-fM-OCQ">
+                    <navigationItem key="navigationItem" title="Media Unit" id="B81-fM-OCQ">
                         <barButtonItem key="rightBarButtonItem" title="Refresh" id="Gp3-xC-RMW">
                             <connections>
                                 <action selector="refreshButton:" destination="pma-5c-gKe" id="tLA-Wr-fdf"/>
@@ -56,61 +56,17 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <sections>
-                            <tableViewSection headerTitle="StripView" id="cD7-CH-5kT">
-                                <cells>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" textLabel="jcW-o5-z3t" rowHeight="78" style="IBUITableViewCellStyleDefault" id="c7c-f0-lJA">
-                                        <rect key="frame" x="16" y="49.5" width="343" height="78"/>
-                                        <autoresizingMask key="autoresizingMask"/>
-                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="c7c-f0-lJA" id="zID-Ks-u6J">
-                                            <rect key="frame" x="0.0" y="0.0" width="317.5" height="78"/>
-                                            <autoresizingMask key="autoresizingMask"/>
-                                            <subviews>
-                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Single (Container View)" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="jcW-o5-z3t">
-                                                    <rect key="frame" x="16" y="0.0" width="293.5" height="78"/>
-                                                    <autoresizingMask key="autoresizingMask"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                    <nil key="textColor"/>
-                                                    <nil key="highlightedColor"/>
-                                                </label>
-                                            </subviews>
-                                        </tableViewCellContentView>
-                                        <connections>
-                                            <segue destination="MQo-q3-7r6" kind="show" id="QPb-qN-q6h"/>
-                                        </connections>
-                                    </tableViewCell>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" textLabel="QQm-HL-Nb6" rowHeight="78" style="IBUITableViewCellStyleDefault" id="Yt1-9b-xn4">
-                                        <rect key="frame" x="16" y="127.5" width="343" height="78"/>
-                                        <autoresizingMask key="autoresizingMask"/>
-                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Yt1-9b-xn4" id="pEr-e7-JVv">
-                                            <rect key="frame" x="0.0" y="0.0" width="317.5" height="78"/>
-                                            <autoresizingMask key="autoresizingMask"/>
-                                            <subviews>
-                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Multiple (Collection View)" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="QQm-HL-Nb6">
-                                                    <rect key="frame" x="16" y="0.0" width="293.5" height="78"/>
-                                                    <autoresizingMask key="autoresizingMask"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                    <nil key="textColor"/>
-                                                    <nil key="highlightedColor"/>
-                                                </label>
-                                            </subviews>
-                                        </tableViewCellContentView>
-                                        <connections>
-                                            <segue destination="fOt-2H-GaU" kind="show" id="xRa-v6-grK"/>
-                                        </connections>
-                                    </tableViewCell>
-                                </cells>
-                            </tableViewSection>
                             <tableViewSection headerTitle="UnitView" id="etc-aD-ehd">
                                 <cells>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" textLabel="b87-J5-8Um" rowHeight="78" style="IBUITableViewCellStyleDefault" id="z4p-Vg-ouD">
-                                        <rect key="frame" x="16" y="255.5" width="343" height="78"/>
+                                        <rect key="frame" x="16" y="49.5" width="343" height="78"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="z4p-Vg-ouD" id="CJj-eB-bw8">
-                                            <rect key="frame" x="0.0" y="0.0" width="317.5" height="78"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="318.5" height="78"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Single (Container View Swift)" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="b87-J5-8Um">
-                                                    <rect key="frame" x="16" y="0.0" width="293.5" height="78"/>
+                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Media Unit" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="b87-J5-8Um">
+                                                    <rect key="frame" x="16" y="0.0" width="294.5" height="78"/>
                                                     <autoresizingMask key="autoresizingMask"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
@@ -123,14 +79,14 @@
                                         </connections>
                                     </tableViewCell>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" textLabel="jJc-Wj-F6a" rowHeight="78" style="IBUITableViewCellStyleDefault" id="dC4-ye-SDw">
-                                        <rect key="frame" x="16" y="333.5" width="343" height="78"/>
+                                        <rect key="frame" x="16" y="127.5" width="343" height="78"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="dC4-ye-SDw" id="FKS-m3-cMv">
-                                            <rect key="frame" x="0.0" y="0.0" width="317.5" height="78"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="318.5" height="78"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Single (Container View ObjC)" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="jJc-Wj-F6a">
-                                                    <rect key="frame" x="16" y="0.0" width="293.5" height="78"/>
+                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Playlist Unit" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="jJc-Wj-F6a">
+                                                    <rect key="frame" x="16" y="0.0" width="294.5" height="78"/>
                                                     <autoresizingMask key="autoresizingMask"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
@@ -143,14 +99,14 @@
                                         </connections>
                                     </tableViewCell>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" textLabel="Hgu-ot-SVb" rowHeight="78" style="IBUITableViewCellStyleDefault" id="DP4-EV-cfT">
-                                        <rect key="frame" x="16" y="411.5" width="343" height="78"/>
+                                        <rect key="frame" x="16" y="205.5" width="343" height="78"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="DP4-EV-cfT" id="40s-Mz-onc">
-                                            <rect key="frame" x="0.0" y="0.0" width="317.5" height="78"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="318.5" height="78"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Multiple (Collection View)" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="Hgu-ot-SVb">
-                                                    <rect key="frame" x="16" y="0.0" width="293.5" height="78"/>
+                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Multiple Units" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="Hgu-ot-SVb">
+                                                    <rect key="frame" x="16" y="0.0" width="294.5" height="78"/>
                                                     <autoresizingMask key="autoresizingMask"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
@@ -204,7 +160,7 @@
         <!--Multiple StripView-->
         <scene sceneID="eiQ-mw-1h6">
             <objects>
-                <viewController title="Multiple StripView" id="fOt-2H-GaU" customClass="APEMultipleStripsViewController" customModule="Apester" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="APEMultipleStripsViewController" title="Multiple StripView" id="fOt-2H-GaU" customClass="APEMultipleStripsViewController" customModule="Apester" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="ZL4-IJ-CHq"/>
                         <viewControllerLayoutGuide type="bottom" id="dkN-SG-8z9"/>
@@ -214,7 +170,7 @@
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="Lq0-op-lId">
-                                <rect key="frame" x="20" y="49" width="335" height="598"/>
+                                <rect key="frame" x="20" y="5" width="335" height="642"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="NNR-EA-UZs">
                                     <size key="itemSize" width="375" height="200"/>
@@ -277,7 +233,7 @@
         <!--Single StripView-->
         <scene sceneID="ZXa-mi-4CD">
             <objects>
-                <viewController title="Single StripView" id="MQo-q3-7r6" customClass="APESingleStripViewController" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="APESingleStripViewController" title="Single StripView" id="MQo-q3-7r6" customClass="APESingleStripViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="A2D-nh-aV4"/>
                         <viewControllerLayoutGuide type="bottom" id="ajn-Qh-5Sv"/>
@@ -287,7 +243,7 @@
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="1uh-Lx-CHo">
-                                <rect key="frame" x="20" y="49" width="335" height="128"/>
+                                <rect key="frame" x="20" y="5" width="335" height="128"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="128" id="NE8-4o-yKx"/>
                                 </constraints>
@@ -380,7 +336,7 @@
                             <constraint firstItem="ufo-c7-YmU" firstAttribute="leading" secondItem="SZy-8Q-sQf" secondAttribute="leading" constant="20" id="kdt-js-YPp"/>
                         </constraints>
                     </view>
-                    <navigationItem key="navigationItem" title="Multiple UnitView" id="El5-f6-wLb"/>
+                    <navigationItem key="navigationItem" title="Multiple Units" id="El5-f6-wLb"/>
                     <connections>
                         <outlet property="collectionView" destination="ufo-c7-YmU" id="zpt-bu-daI"/>
                     </connections>
@@ -419,7 +375,7 @@
                         </constraints>
                     </view>
                     <toolbarItems/>
-                    <navigationItem key="navigationItem" title="Single UnitView" largeTitleDisplayMode="never" id="dgf-Kh-9C2">
+                    <navigationItem key="navigationItem" title="Playlist Unit" largeTitleDisplayMode="never" id="dgf-Kh-9C2">
                         <barButtonItem key="rightBarButtonItem" title="Refresh" id="Quv-Iv-7gu">
                             <connections>
                                 <action selector="refreshButton:" destination="oz4-xr-voD" id="2kl-E6-xAK"/>
